[project]
name = "ai-agent-youtube-assist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.9",
    "openai>=1.98.0",
    "pytube>=15.0.0",
    "streamlit>=1.47.1",
    "youtube-transcript-api==1.1.0",
]
